--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.7.1
+  syncfusion_flutter_calendar: ^21.1.41
+  time_range_picker: ^2.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
