--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^2.7.1
   syncfusion_flutter_calendar: ^21.1.41
   time_range_picker: ^2.2.0
+  get: ^4.3.8
 
 
   # The following adds the Cupertino Icons font to your application.
