--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   syncfusion_flutter_calendar: ^21.1.41
   time_range_picker: ^2.2.0
   get: ^4.3.8
+  url_launcher: ^6.1.12
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.5.2
   firebase_auth: ^4.6.1
+  firebase_storage: ^11.2.6
 
 dev_dependencies:
   flutter_test:
